# plex_watcher

./: .gitignore  README.md  pyproject.toml  run.py
plex_watcher/: __init__.py  creds.py  last_run.py  plex.py  pushover_cli.py
tests/: test_plex_watcher.py
